changing popup button

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,8 @@
       </style>
     </head>
     <body>
-      <button id="get_url"></button>
+      <script type="checkAuth.js"></script>
+      <button id="get_url">Login</button>
       <script src="popup.js"></script>
     </body>
   </html>
